--- a/pyprojecttoml.template
+++ b/pyprojecttoml.template
@@ -1,8 +1,8 @@
-# shared/pyprojecttoml.template
+# pyprojecttoml.template
 #
 # This file is the template for pythoneda-shared-git/shared's pyproject.toml
 #
-# Copyright (C) 2023-today rydnr's pythoneda-shared-git/shared-artifact
+# Copyright (C) 2023-today rydnr's pythoneda-shared-git-def/shared
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
