[4112653a-5fa6-4938-93f2-51ad5ee5e13f] Rename pythoneda package to pythoneda.shared

--- a/pyprojecttoml.template
+++ b/pyprojecttoml.template
@@ -31,7 +31,7 @@ GitPython = "^@gitPython@"
 packaging = "^@packaging@"
 paramiko = "^@paramiko@"
 python = "^@pythonMajorMinorVersion@"
-pythoneda-shared-pythoneda-domain = "^@pythonedaSharedPythonedaDomain@"
+pythoneda-shared-domain = "^@pythonedaSharedDomain@"
 semver = "^@semver@"
 
 [build-system]
