pythoneda-shared-def -> pythoneda-shared-pythonlang-def

--- a/pyprojecttoml.template
+++ b/pyprojecttoml.template
@@ -31,7 +31,7 @@ GitPython = "^@gitPython@"
 packaging = "^@packaging@"
 paramiko = "^@paramiko@"
 python = "^@pythonMajorMinorVersion@"
-pythoneda-shared-domain = "^@pythonedaSharedDomain@"
+pythoneda-shared-pythonlang-domain = "^@pythonedaSharedPythonlangDomain@"
 pythoneda-shared-pythonlang-shell = "^@pythonedaSharedPythonlangShell@"
 semver = "^@semver@"
 
